# WattOhm

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  Rocket.toml  docker-compose.yml
docs/: WattOhm.postman_collection.json
hello_world/src/: main.rs
migrations/2021-10-28-212901_create_posts/: up.sql
postgres/: database.env  docker-compose.yml
postgres/postgres-data/global/: 1260  1262  2671  pg_control
postgres/postgres-data/pg_stat/: global.stat
postgres/sql/: create_tables.sql
src/: main.rs
src/card/: inttovec.rs  mod.rs  numbergen.rs
src/post/: model.rs
src/posts/: handlers.rs  mod.rs  model.rs  schema.rs
